# slt-billing-system

./: .dockerignore  .env.example  .gitignore  Automated_SLT_Bill_PDF_Generation_System_Report.docx  CLAUDE.md  COMPLETE_WORKFLOW.md  COMPREHENSIVE_PROJECT_REPORT.md  Dockerfile  IMPLEMENTATION_GUIDES.md  MANUAL_STEPS.md  README.md  SYSTEM_ARCHITECTURE_DIAGRAMS.md  alembic.ini  compare_smartai.py  docker-compose.prod.yml  docker-compose.yml  ecs-db-inspect-overrides.json  ecs-db-seed-overrides.json  ecs-invoice-lines-check.json  frontend-bucket-policy.json  generate_project_report.py  migrate.py  pyproject.toml  reset_test_data.py  slt-sync.service  start.ps1  sync.sh
.github/workflows/: deploy.yml
Models/SLT_ Documents/: Full Rule Set V7.01_23042026.xlsx  Full Rule Set V7.02_03072026.xlsx  Samples.xlsx
Models/SmartAI_Bill/: config.py  requirements.txt
Models/SmartAI_Bill_v_Upt/: CLAUDE.md  config.py  requirements.txt
app/: billing_scheduler.py  cli.py
aws/: PHASE_6E_6G_GUIDE.md  phase-6e-deploy-infra.ps1  phase-6f-monitoring.ps1  phase-6g-smoke-test.ps1  task-def-backend.json  task-def-beat.json  task-def-worker.json
docs/: ADMIN_PORTAL_EXPANSION_PLAN.md  API.md  AUTH.md  BILLING.md  DATABASE.md  FRONTEND.md  NOTIFICATIONS.md  PDF.md  ROADMAP.md  SCHEDULER.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
migrations/: env.py
tests/: test_admin_expansion_seed.py  test_engine.py  test_money.py  test_notification_senders.py  test_notification_tasks.py  test_pdf_barcodes.py  test_pdf_smoke.py
(+863 files in other folders)
