[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slt-billing-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # DB
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Validation / config
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # PDF
    "reportlab>=4.1",
    "qrcode[pil]>=7.4",
    "python-barcode>=0.15",
    "Pillow>=10.3",
    # CLI
    "typer>=0.12",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # Auth
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
